--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
 #      url: jdbc:mysql://123.60.85.87/WebApp
       url: jdbc:mysql://127.0.0.1/WebApp
       username: root
-      password: root
+      password: 123456
       driver-class-name: com.mysql.cj.jdbc.Driver
 
       initialSize: 10
