--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
   datasource:
     druid:
       #Changing the database name
-#      url: jdbc:mysql://123.60.85.87/WebApp
-      url: jdbc:mysql://127.0.0.1/WebApp
+      #      url: jdbc:mysql://123.60.85.87/WebApp
+      url: jdbc:mysql://127.0.0.1/groupfive
       username: root
       password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -32,13 +32,13 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
 server:
   port: 9090
 
-
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-
